// Copyright 2021 Harness Inc. All rights reserved.
// Use of this source code is governed by the PolyForm Shield 1.0.0 license
// that can be found in the licenses directory at the root of this repository, also available at
// https://polyformproject.org/wp-content/uploads/2020/06/PolyForm-Shield-1.0.0.txt.

syntax = "proto3";

package io.harness.pms.contracts.plan;

option java_multiple_files = true;

import "io/harness/pms/contracts/plan/trigger_info.proto";
import "io/harness/pms/contracts/plan/principal_info.proto";

// next ID: 14
message ExecutionMetadata {
  int32 runSequence = 1;
  ExecutionTriggerInfo triggerInfo = 2;
  string pipelineIdentifier = 4;
  string executionUuid = 6;
  ExecutionPrincipalInfo principalInfo = 8;
  bytes gitSyncBranchContext = 10;
  string moduleType = 11;
  RetryExecutionInfo retryInfo = 12;
  bool isNotificationConfigured = 13;
}

message RetryExecutionInfo {
  bool isRetry = 1;
  string rootExecutionId = 2;
  string parentRetryId = 3;
}
