// Copyright 2021 Harness Inc. All rights reserved.
// Use of this source code is governed by the PolyForm Shield 1.0.0 license
// that can be found in the licenses directory at the root of this repository, also available at
// https://polyformproject.org/wp-content/uploads/2020/06/PolyForm-Shield-1.0.0.txt.

syntax = "proto3";

package io.harness.pms.contracts.plan;

option java_multiple_files = true;

message ExecutionPrincipalInfo {
  string principal = 1;
  PrincipalType principalType = 2;
  bool shouldValidateRbac = 3;
}

enum PrincipalType {
  UNKNOWN = 0;
  USER = 1;
  USER_GROUP = 2;
  API_KEY = 3;
  SERVICE = 4;
  SERVICE_ACCOUNT = 5;
}
